@@ -28,6 +28,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 public class GameServiceTest extends AbstractTest {
     
@@ -50,6 +51,7 @@ public class GameServiceTest extends AbstractTest {
     @Before
     public void before() {
         gameService = new GameService(musicService, profileService, profileStatService, spotifyService, configProperties, roundContentProperties);
+        Mockito.doNothing().when(musicService).refresh();
     }
     
     
@@ -59,14 +61,15 @@ public class GameServiceTest extends AbstractTest {
         
         Mockito.when(profileService.find( Mockito.any(ProfileDTO.class) )).thenReturn(null).thenAnswer(invocation -> {
             ProfileDTO p = invocation.getArgument(0);
-            return ((ProfileDTO) new ProfileDTO().setId( p.getId() ))
+            return new ProfileDTO()
+                    .setId( p.getId() )
                     .setName( "name" + p.getId() )
                     .setAvatarName("avatarName");
         });
         Mockito.doThrow(new SpotifyException("se")).when(spotifyService).testConnection();
         Mockito.when(musicService.getMusicNumber(Mockito.any(Theme.class), Mockito.any(ConnectionMode.class))).thenReturn(0, 10);
         
-        List<Integer> profilesId = Arrays.asList(0, 1);
+        Set<Integer> profilesId = new HashSet<>( Arrays.asList(0, 1) );
         
         try {
             gameService.newGame(null);
@@ -77,7 +80,32 @@ public class GameServiceTest extends AbstractTest {
         }
         
         try {
-            gameService.newGame( new NewGame(new HashSet<>(profilesId), Duration.NORMAL, Collections.singletonList(Theme.ANNEES_60), null, ConnectionMode.OFFLINE) );
+            gameService.newGame(new NewGame());
+            Assert.fail("Doit lever une IllegalArgumentException car un param est KO.");
+        }
+        catch (IllegalArgumentException e) {
+            TestUtils.verifyException(new IllegalArgumentException("Le champ 'newGame -> players' est obligatoire."), e);
+        }
+        
+        try {
+            gameService.newGame(new NewGame().setProfilesId(profilesId));
+            Assert.fail("Doit lever une IllegalArgumentException car un param est KO.");
+        }
+        catch (IllegalArgumentException e) {
+            TestUtils.verifyException(new IllegalArgumentException("Le champ 'newGame -> duration' est obligatoire."), e);
+        }
+        
+        try {
+            gameService.newGame(new NewGame().setProfilesId(profilesId).setDuration(Duration.NORMAL));
+            Assert.fail("Doit lever une IllegalArgumentException car un param est KO.");
+        }
+        catch (IllegalArgumentException e) {
+            TestUtils.verifyException(new IllegalArgumentException("Le champ 'newGame -> connectionMode' est obligatoire."), e);
+        }
+        
+        try {
+            gameService.newGame( new NewGame().setProfilesId(profilesId).setDuration(Duration.NORMAL)
+                    .setThemes(Collections.singletonList(Theme.ANNEES_60)).setConnectionMode(ConnectionMode.OFFLINE) );
             Assert.fail("Doit lever une NotFoundException car un mock (musicService) return 0.");
         }
         catch (NotFoundException e) {
@@ -85,7 +113,7 @@ public class GameServiceTest extends AbstractTest {
         }
         
         try {
-            gameService.newGame( new NewGame(new HashSet<>(profilesId), Duration.NORMAL, null, null, ConnectionMode.OFFLINE) );
+            gameService.newGame( new NewGame().setProfilesId(profilesId).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE) );
             Assert.fail("Doit lever une NotFoundException car un param est KO.");
         }
         catch (NotFoundException e) {
@@ -93,7 +121,7 @@ public class GameServiceTest extends AbstractTest {
         }
         
         try {
-            gameService.newGame( new NewGame(new HashSet<>(Collections.singletonList(1)), Duration.NORMAL, null, null, ConnectionMode.OFFLINE) );
+            gameService.newGame( new NewGame().setProfilesId(new HashSet<>(Collections.singletonList(1))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE) );
             Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
         }
         catch (IllegalArgumentException e) {
@@ -101,7 +129,7 @@ public class GameServiceTest extends AbstractTest {
         }
         
         try {
-            gameService.newGame( new NewGame(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)), Duration.NORMAL, null, null, ConnectionMode.OFFLINE));
+            gameService.newGame( new NewGame().setProfilesId(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE));
             Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
         }
         catch (IllegalArgumentException e) {
@@ -109,14 +137,14 @@ public class GameServiceTest extends AbstractTest {
         }
         
         
-        Game game = gameService.newGame( new NewGame(new HashSet<>(profilesId), Duration.NORMAL, null, null, ConnectionMode.OFFLINE) );
+        Game game = gameService.newGame( new NewGame().setProfilesId(profilesId).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE) );
         Assert.assertEquals( profilesId.size(), game.getPlayers().size() );
         
-        game = gameService.newGame( new NewGame(new HashSet<>(Arrays.asList(0, 1)), Duration.NORMAL, null, null, ConnectionMode.OFFLINE) );
+        game = gameService.newGame( new NewGame().setProfilesId(new HashSet<>(Arrays.asList(0, 1))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE) );
         Assert.assertEquals( 2, game.getPlayers().size() );
         
         try {
-            gameService.newGame( new NewGame(new HashSet<>(Arrays.asList(0, 1)), Duration.NORMAL, null, null, ConnectionMode.ONLINE) );
+            gameService.newGame( new NewGame().setProfilesId(new HashSet<>(Arrays.asList(0, 1))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.ONLINE) );
             Assert.fail("Doit lever une car la connection spotify est KO.");
         }
         catch (SpotifyException e) {
@@ -130,14 +158,13 @@ public class GameServiceTest extends AbstractTest {
         MusicDTO music = new MusicDTO("name", Theme.ANNEES_60, ConnectionMode.OFFLINE);
         MusicDTO music2 = new MusicDTO("name", Theme.ANNEES_80, ConnectionMode.OFFLINE);
         
-        ProfileDTO profile = (ProfileDTO) new ProfileDTO("name","avatarName").setId(1);
-        ProfileDTO profile1 = (ProfileDTO) new ProfileDTO("name1","avatarName").setId(2);
-        ProfileDTO profile2 = (ProfileDTO) new ProfileDTO("name2","avatarName").setId(3);
+        ProfileDTO profile = new ProfileDTO().setName("name").setAvatarName("avatarName").setId(1);
+        ProfileDTO profile1 = new ProfileDTO().setName("name1").setAvatarName("avatarName").setId(2);
+        ProfileDTO profile2 = new ProfileDTO().setName("name2").setAvatarName("avatarName").setId(3);
         ProfileStatDTO profileStat;
         ProfileStatDTO profileStat1;
         ProfileStatDTO profileStat2;
         
-        Mockito.doNothing().when(musicService).refresh();
         Mockito.when(musicService.find( Mockito.any(MusicDTO.class) )).thenReturn(null, music2, music);
         Mockito.when(musicService.getMusicNumber(Mockito.any(Theme.class), Mockito.any(ConnectionMode.class))).thenReturn(10);
         
@@ -153,18 +180,25 @@ public class GameServiceTest extends AbstractTest {
             }
         });
         
-        List<Integer> profilesId = Arrays.asList(0, 1, 2);
-        MusicResult musicResult = new MusicResult( 0, music,
-                Collections.singletonList(profile.getName()), null,
-                Collections.singletonList(profile.getName()), null);
-        
+        Set<Integer> profilesId = new HashSet<>( Arrays.asList(0, 1, 2) );
+        MusicResult musicResult = new MusicResult().setGameId(0).setMusic(music)
+                .setAuthorWinners(Collections.singletonList(profile.getName()))
+                .setLosers(Collections.singletonList(profile.getName()));
         
         try {
             gameService.apply(null);
-            Assert.fail("Doit lever une IllegalArgumentException le gameDto n'est pas retrouvée.");
+            Assert.fail("Doit lever une IllegalArgumentException car un param est KO.");
         }
         catch (IllegalArgumentException e) {
             TestUtils.verifyException(new IllegalArgumentException("Le champ 'musicResult' est obligatoire."), e);
+        }
+        
+        try {
+            gameService.apply(new MusicResult());
+            Assert.fail("Doit lever une IllegalArgumentException car un param est KO.");
+        }
+        catch (IllegalArgumentException e) {
+            TestUtils.verifyException(new IllegalArgumentException("Le champ 'musicResult -> gameId' est obligatoire."), e);
         }
         
         try {
@@ -175,8 +209,8 @@ public class GameServiceTest extends AbstractTest {
             TestUtils.verifyException(new NotFoundException("Game not found."), e);
         }
         
-        
-        gameService.newGame( new NewGame(new HashSet<>(profilesId), Duration.NORMAL, Arrays.asList(Theme.ANNEES_60, Theme.ANNEES_70), null, ConnectionMode.OFFLINE) );
+        gameService.newGame( new NewGame().setProfilesId(profilesId).setDuration(Duration.NORMAL)
+                .setThemes(Arrays.asList(Theme.ANNEES_60, Theme.ANNEES_70)).setConnectionMode(ConnectionMode.OFFLINE) );
         
         
         try {
@@ -189,9 +223,9 @@ public class GameServiceTest extends AbstractTest {
         
         try {
             
-            musicResult = new MusicResult( 0, music2,
-                    Collections.singletonList(profile.getName()), null,
-                    Collections.singletonList(profile.getName()), null);
+            musicResult = new MusicResult().setGameId(0).setMusic(music2)
+                    .setAuthorWinners(Collections.singletonList(profile.getName()))
+                    .setLosers(Collections.singletonList(profile.getName()));
             
             gameService.apply(musicResult);
             Assert.fail("Doit lever une NotFoundException car le theme de la musique n'est pas dans la game.");
@@ -201,9 +235,9 @@ public class GameServiceTest extends AbstractTest {
         }
         
         music = new MusicDTO("name", Theme.ANNEES_60, ConnectionMode.OFFLINE);
-        profile = (ProfileDTO) new ProfileDTO("name", "avatarName").setId(1);
-        profile1 = (ProfileDTO) new ProfileDTO("name1","avatarName").setId(2);
-        profile2 = (ProfileDTO) new ProfileDTO("name2","avatarName").setId(3);
+        profile = new ProfileDTO().setName("name").setAvatarName("avatarName").setId(1);
+        profile1 = new ProfileDTO().setName("name1").setAvatarName("avatarName").setId(2);
+        profile2 = new ProfileDTO().setName("name2").setAvatarName("avatarName").setId(3);
         profileStat = new ProfileStatDTO(1);
         profileStat1 = new ProfileStatDTO(2);
         profileStat2 = new ProfileStatDTO(3);
@@ -211,20 +245,20 @@ public class GameServiceTest extends AbstractTest {
         // refaire les when car les objets ont subit un new
         Mockito.when(musicService.find( Mockito.any(MusicDTO.class) )).thenReturn(music);
         Mockito.when(musicService.update( Mockito.any(MusicDTO.class) )).thenReturn(music);
-        Mockito.when(profileStatService.findByProfile( new ProfileDTO("name") )).thenReturn(profileStat);
-        Mockito.when(profileStatService.findByProfile( new ProfileDTO("name1") )).thenReturn(profileStat1);
-        Mockito.when(profileStatService.findByProfile( new ProfileDTO("name2") )).thenReturn(profileStat2);
+        Mockito.when(profileStatService.findByProfile( new ProfileDTO().setName("name") )).thenReturn(profileStat);
+        Mockito.when(profileStatService.findByProfile( new ProfileDTO().setName("name1") )).thenReturn(profileStat1);
+        Mockito.when(profileStatService.findByProfile( new ProfileDTO().setName("name2") )).thenReturn(profileStat2);
         Mockito.when(profileStatService.update( new ProfileStatDTO(1) )).thenReturn(profileStat);
         Mockito.when(profileStatService.update( new ProfileStatDTO(2) )).thenReturn(profileStat1);
         Mockito.when(profileStatService.update( new ProfileStatDTO(3) )).thenReturn(profileStat2);
         
         
         List<String> playersName = Collections.singletonList(profile.getName());
-        musicResult = new MusicResult( 0, music, playersName, null, null, null );
+        musicResult = new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName);
         Game game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 100, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(1), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(1), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(1).getScore() );
         Assert.assertNull( game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60) );
@@ -233,22 +267,22 @@ public class GameServiceTest extends AbstractTest {
         Assert.assertEquals( 2, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 1, game.getNbMusicsPlayed() );
         Assert.assertEquals( 1, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(1), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(1), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 1, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(1), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(1), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
         Assert.assertEquals( 0, profileStat1.getBestScores().size() );
-        Assert.assertEquals( new Integer(1), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getFoundMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
-        musicResult = new MusicResult( 0, music, null, null, playersName, null );
+        musicResult = new MusicResult().setGameId(0).setMusic(music).setLosers(playersName);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 100, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(1), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(1), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(1).getScore() );
         Assert.assertNull( game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60) );
@@ -257,21 +291,21 @@ public class GameServiceTest extends AbstractTest {
         Assert.assertEquals( 2, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 2, game.getNbMusicsPlayed() );
         Assert.assertEquals( 2, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(2), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(2), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 2, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(2), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(1), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(2), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(2), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(2), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getFoundMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
-        musicResult = new MusicResult( 0, music, playersName, null, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 200, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(2), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(2), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(1).getScore() );
         Assert.assertNull( game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60) );
@@ -280,121 +314,121 @@ public class GameServiceTest extends AbstractTest {
         Assert.assertEquals( 2, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 3, game.getNbMusicsPlayed() );
         Assert.assertEquals( 3, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(3), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 3, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(3), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(2), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(2), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(3), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getFoundMusics().get(Theme.ANNEES_60) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
         playersName = Collections.singletonList(profile1.getName());
-        musicResult = new MusicResult( 0, music, playersName, null, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName);
         game = gameService.apply(musicResult);
         game = gameService.apply(musicResult);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 200, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(2), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(2), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 2, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 300, game.getPlayers().get(1).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(1).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(2).getScore() );
         Assert.assertEquals( 3, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 6, game.getNbMusicsPlayed() );
         Assert.assertEquals( 6, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(6), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(6), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 6, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(6), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(2), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(6), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(2), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(6), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(6), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
         playersName = Collections.singletonList(profile.getName());
-        musicResult = new MusicResult( 0, music, playersName, null, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 300, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 300, game.getPlayers().get(1).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(1).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(2).getScore() );
         Assert.assertEquals( 3, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 7, game.getNbMusicsPlayed() );
         Assert.assertEquals( 7, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(7), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(7), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 7, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(7), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(7), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(7), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(7), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
         playersName = Collections.singletonList(profile.getName());
-        musicResult = new MusicResult( 0, music, null, playersName, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setTitleWinners(playersName);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 400, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 300, game.getPlayers().get(1).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 2, game.getPlayers().get(1).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(2).getScore() );
         Assert.assertEquals( 3, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 8, game.getNbMusicsPlayed() );
         Assert.assertEquals( 8, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(8), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(8), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 8, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(8), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(8), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(8), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(8), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
         playersName = Collections.singletonList(profile.getName());
-        musicResult = new MusicResult( 0, music, playersName, playersName, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName).setTitleWinners(playersName);
         game = gameService.apply(musicResult);
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
         Assert.assertEquals( 600, game.getPlayers().get(0).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(0).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 1, game.getPlayers().get(0).getRank() );
         Assert.assertEquals( 300, game.getPlayers().get(1).getScore() );
-        Assert.assertEquals( new Integer(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(3), game.getPlayers().get(1).getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertEquals( 2, game.getPlayers().get(1).getRank() );
         Assert.assertEquals( 0, game.getPlayers().get(2).getScore() );
         Assert.assertEquals( 3, game.getPlayers().get(2).getRank() );
         Assert.assertEquals( 9, game.getNbMusicsPlayed() );
         Assert.assertEquals( 9, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( new Integer(9), game.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(9), game.getListenedMusics().get(Theme.ANNEES_60) );
         Assert.assertEquals( 9, music.getPlayed() );
         Assert.assertEquals( 0, profileStat.getBestScores().size() );
-        Assert.assertEquals( new Integer(9), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(9), profileStat.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(9), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
-        Assert.assertEquals( new Integer(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
+        Assert.assertEquals( Integer.valueOf(9), profileStat1.getListenedMusics().get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(3), profileStat1.getFoundMusics().get(Theme.ANNEES_60).get(GoodAnswer.AUTHOR) );
         Assert.assertNull( profileStat1.getPlayedGames().get(game.getDuration()) );
         
-        musicResult = new MusicResult( 0, music, playersName, null, null, null );
+        musicResult =  new MusicResult().setGameId(0).setMusic(music).setAuthorWinners(playersName);
         while (game.getRound() != null)
             game = gameService.apply(musicResult);
         
         Assert.assertTrue( game.isFinished() );
-        Assert.assertEquals( new Integer(1), profileStat.getPlayedGames().get(game.getDuration()) );
-        Assert.assertEquals( new Integer(1), profileStat1.getPlayedGames().get(game.getDuration()) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat.getPlayedGames().get(game.getDuration()) );
+        Assert.assertEquals( Integer.valueOf(1), profileStat1.getPlayedGames().get(game.getDuration()) );
         
         // classic : 15 à 100pts / 1 à 200pts (15 car 20 - 1 loser - 3 ou profile1 gagne - 1 ou profile gagne auteur et titre)
         // choice : 4 à 150pts / 8 à 100 pts
@@ -402,8 +436,8 @@ public class GameServiceTest extends AbstractTest {
         // friendship : 10 à 150pts
         // thief : 20 à 100pts
         // recovery : 10 à 30pts
-        Assert.assertTrue( profileStat.getBestScores().get(Duration.NORMAL) >= new Integer(15*100 + 1*200 + 4*150 + 8*100 + 10*150 + 10*150 + 20*100 + 10*30)
-                && profileStat.getBestScores().get(Duration.NORMAL) <= new Integer(15*100 + 1*200 + 4*150 + 8*100 + 10*150 + 10*100 + 10*150 + 20*100 + 10*30) );
+        Assert.assertTrue( profileStat.getBestScores().get(Duration.NORMAL) >= Integer.valueOf(15*100 + 1*200 + 4*150 + 8*100 + 10*150 + 10*150 + 20*100 + 10*30)
+                && profileStat.getBestScores().get(Duration.NORMAL) <= Integer.valueOf(15*100 + 1*200 + 4*150 + 8*100 + 10*150 + 10*100 + 10*150 + 20*100 + 10*30) );
     }
     
     @Test
@@ -427,15 +461,15 @@ public class GameServiceTest extends AbstractTest {
         }
         
         
-        ProfileDTO profileDto = (ProfileDTO) new ProfileDTO("name", "avatarName").setId(1);
-        ProfileDTO profileDto1 = (ProfileDTO) new ProfileDTO("name1", "avatarName").setId(2);
+        ProfileDTO profileDto = new ProfileDTO().setName("name").setAvatarName("avatarName").setId(1);
+        ProfileDTO profileDto1 = new ProfileDTO().setName("name1").setAvatarName("avatarName").setId(2);
         Mockito.when(profileService.find( Mockito.any(ProfileDTO.class) )).thenAnswer(invocation -> {
             ProfileDTO p = invocation.getArgument(0);
             return ( p.getId().equals(1) ) ? profileDto : profileDto1;
         });
         Mockito.when(musicService.getMusicNumber(Mockito.any(Theme.class), Mockito.any(ConnectionMode.class))).thenReturn(10);
         
-        NewGame ng = new NewGame(new HashSet<>(Arrays.asList(0, 1)), Duration.NORMAL, null, null, ConnectionMode.OFFLINE);
+        NewGame ng = new NewGame().setProfilesId(new HashSet<>(Arrays.asList(0, 1))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE);
         Game expected = gameService.newGame(ng);
         
         Game actual = gameService.findById(expected.getId());
@@ -445,15 +479,15 @@ public class GameServiceTest extends AbstractTest {
     @Test
     public void findAll() throws NotFoundException, SpotifyException {
         
-        ProfileDTO profileDto = (ProfileDTO) new ProfileDTO("name", "avatarName").setId(1);
-        ProfileDTO profileDto1 = (ProfileDTO) new ProfileDTO("name1", "avatarName").setId(2);
+        ProfileDTO profileDto = new ProfileDTO().setName("name").setAvatarName("avatarName").setId(1);
+        ProfileDTO profileDto1 = new ProfileDTO().setName("name1").setAvatarName("avatarName").setId(2);
         Mockito.when(profileService.find( Mockito.any(ProfileDTO.class) )).thenAnswer(invocation -> {
             ProfileDTO p = invocation.getArgument(0);
             return ( p.getId().equals(1) ) ? profileDto : profileDto1;
         });
         Mockito.when(musicService.getMusicNumber(Mockito.any(Theme.class), Mockito.any(ConnectionMode.class))).thenReturn(10);
         
-        NewGame ng = new NewGame(new HashSet<>(Arrays.asList(0, 1)), Duration.NORMAL, null, null, ConnectionMode.OFFLINE);
+        NewGame ng = new NewGame().setProfilesId(new HashSet<>(Arrays.asList(0, 1))).setDuration(Duration.NORMAL).setConnectionMode(ConnectionMode.OFFLINE);
         Game expected = gameService.newGame(ng);
         gameService.newGame(ng);
         gameService.newGame(ng);
